--- a/public/stylesheets/about.css
+++ b/public/stylesheets/about.css
@@ -1,11 +1,11 @@
 /*======================================================== ABOUT ========================================================*/
 
 #about {
-	text-align: center;
+	text-align: left;
 	color: black;
-	background-color: rgba(246, 246, 246, 1);
-	padding-bottom: 63px;
+	background-color: #dee5e5;
 	padding-top: 90px;
+	padding: 90px 40px 63px;
 }
 
 #about .content {
@@ -40,7 +40,7 @@
 #about h1 {
 	/*font-weight: 400;*/
 	font-size: 2.9em;
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: 'Baskerville', sans-serif;
 }
 
 #about h4 {
