--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -1,99 +1,105 @@
 /*======================================================== NAVBAR ========================================================*/
 
 .navbar {
-    -webkit-transition: background-color .5s, font-size .5s; /* Safari */
-    transition: background-color .5s, font-size .5s;
-    
-    z-index: 1000;
-    
-    text-align: center;
-    width: 100%;
+	-webkit-transition: background-color 0.5s, font-size 0.5s; /* Safari */
+	transition: background-color 0.5s, font-size 0.5s;
+
+	z-index: 1000;
+
+	text-align: left;
+
+	width: 100%;
 }
 
 #spacer {
-    border: none;
-    margin: 0;
-    padding-top: .1vh;
+	border: none;
+	margin: 0;
+	padding-top: 0.1vh;
 }
 
 #switch {
-    border: none;
-    margin: 0;
+	border: none;
+	margin: 0;
 }
 
 .navbar-sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  
-  background-color: rgba(15,15,15,.92);
+	position: fixed;
+	top: 0;
+	width: 100%;
+
+	background-color: #054a29;
 }
 
 .navbar-bottom {
-    position: fixed;
-     top: 0;
+	position: fixed;
+	top: 0;
 }
 
 .navbar-bottom #nav-list .nav-item a:hover {
-     color: rgb(0,0,0);
-     font-weight: 400;
+	color: rgb(0, 0, 0);
+	font-weight: 400;
 }
 
 #nav-list {
-    padding: 39px 0 30px 0;
+	padding: 19px 0 10px 0;
 }
 
-#nav-list li{
-    display:inline-block;
+#nav-list li {
+	display: inline-block;
 }
 
 #nav-head {
-    margin-left: 60px;
-    margin-right:60px;
-    font-size: 1.15em;
+	margin-left: 60px;
+	margin-right: 60px;
+	font-size: 1.15em;
 }
 
 #nav-head a {
-    padding: 2px 6px 2px 6px;
-    border: .2px solid white;
+	padding: 4px 8px 4px 8px;
+	border: 0.2px solid white;
+}
+
+.nav-items {
+	float: right;
+	display: inline;
 }
 
 .nav-item {
-    margin: 0 20px 0 20px;
+	margin: 0 20px 0 20px;
 }
 
 #nav-list li a {
-     color: white;
-     -webkit-transition: color .25s; /* Safari */
-    transition: color .25s;
+	color: white;
+	-webkit-transition: color 0.25s; /* Safari */
+	transition: color 0.25s;
 }
 
 #nav-list .nav-item a:hover {
-     text-decoration:none;
-     color: gray;
+	text-decoration: none;
+	color: gray;
 }
 
 #nav-list li a:visited {
-     text-decoration:none;
+	text-decoration: none;
 }
 
 #nav-list li a:active {
-     text-decoration:none;
+	text-decoration: none;
 }
 
 #nav-list li a:link {
-     text-decoration:none;
+	text-decoration: none;
 }
 
 #nav-list .active {
-    color: grey !important;
+	color: grey !important;
 }
 
 /*DROPDOWN*/
 #nav-list .dropdown {
-    display: none;
+	display: none;
 }
 
 .dropdown-content {
-    display: none;
+	display: none;
 }
