--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,37 +1,37 @@
 <% include partials/header.ejs %>
 
-<div id="landing" class="background-image">
-    <div class="layer">
+<div id="landing" class="background-colored">
         <div class="content">
             <div class="resp-layer">
                 <% include partials/navbar.ejs %>
                 <div id="top-landing"></div>
                 <div id="mid-landing">
                     <div class="logo-background">
-                        <div class="logo"><h1>TOBY WEED</h1><p>D E V E L O P M E N T</p></div>
+                        <div class="logo"><h1>phorum</h1><p>/ˈfôrəm/</p><p>1. <i>noun</i></p>
+                            <p>A medium by which groups articulate their views
+                            on a particular issue in a thoughtful, self-moderating, and civil fashion.</p></div>
                     </div>
                 </div>
-                <a class="button circular" href="#about"><span class="glyphicon glyphicon-menu-down"></span></a>
+                <a class="button landing" href="#about"><span class="glyphicon glyphicon-menu-down"></span></a>
                 </table>
             </div>
         </div>
-        
+
         <div class="sub">
             <% include partials/about.ejs %>
         </div>
-        
+
         <div class="sub">
             <% include partials/projects.ejs %>
         </div>
-        
+
         <div class="sub">
             <% include partials/resume.ejs %>
         </div>
-        
+
         <div class="sub">
             <% include partials/contact.ejs %>
         </div>
-    </div>
 </div>
 
 
