--- a/views/partials/about.ejs
+++ b/views/partials/about.ejs
@@ -1,86 +1,7 @@
 <div id="about">
-    <h1>Hey, I'm Trowbridge.</h1>
+    <h1>Welcome to the Middlebury phorum.</h1>
     <hr/>
     <div class="about-content">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-0 col-sm-1"></div>
-                <div class="col-xs-12 col-sm-3">
-                    <div class="id-box">
-                        <div id="portrait" style="background-image:url(/pics/portrait.png)"></div>
-                        <a id="intro" class="about-btn btn button active">Intro</a>
-                        <a id="bio" class="about-btn btn button">Bio</a>
-                        <!--<a id="coding" class="about-btn btn button">Coding</a>-->
-                        <!--<a id="values" class="about-btn btn button">Values</a>-->
-                    </div>
-                </div>
-
-                <div class="col-xs-12 col-sm-7">
-                    <div id="intro-text" class="about-text">
-                        <h4>But you should probably call me Toby, for both of our sakes. I'm a second year student at
-                            Middlebury College.</h4>
-                        <br/>
-                        <br/>
-                        <h4> Welcome to my development portfolio and personal website.</h4>
-                    </div>
-                    <div id="bio-text" class="about-text">
-                        <p><strong>I grew up in rural Putney, Vermont, with my parents, older sister,
-                            and cat.</strong> I did a lot of drawing and cross-country skiing.
-                        I went to highschool as a day student at Northfield Mount Hermon in Western Massachusetts.
-                        I took a gap year before college, during which I went on some great adventures in Chile, Bolivia,
-                        Cuba, Spain, Italy, Portugal, Denmark, and Crested Butte, Colorado.</p>
-                        <br/>
-                        <p><strong>I am currently an (undeclared) CS and Physics major at Middlebury College in Vermont, and will probably pick up a minor in Math.</strong>
-                        I am attracted to problems at the intersection of quantitative, aesthetic, and philosophical thought.
-                        I aspire to live an impactful and creative life, and think that we live in an era of profound importance.
-                        I enjoy learning and challenges, and thus hope for a lifestyle which requires frequent adaptation.
-                        Both intellectually and practically, I am most excited about information networks' relationship
-                        with human social structure.</p>
-                        <br/>
-                        <p><strong>I believe that curiousity is fundamentally good, that the natural world is sacred, and that individuals' decisions impact the
-                        quality of the future.</strong></p>
-                    </div>
-                    <!--<div id="coding-text" class="about-text">-->
-                    <!--    Since the purpose of this site is to display some of my coding work (and hopefully-->
-                    <!--    get me hired or something), I'll talk here a little about-->
-                    <!--    my experience and skills as a developer specifically.-->
-
-                    <!--    I originally learned about the existence of programming in 9th grade. A little late, perhaps,-->
-                    <!--    but I grew up in rural Vermont on a strict 30 minute per-day online flash-gaming diet. -->
-                    <!--    Anyways, I took an Intro to Programming in Java course. I had a great time, my greatest project -->
-                    <!--    being a game in which the player controls a hippie whose job is to consume as much granola as possible-->
-                    <!--    while avoiding sinister blue and white cars and acquiring mysterious power-up mushrooms.-->
-
-                    <!--    Despite my enjoyment of the elective, I did not code again until my senior year, when I took my highschool's-->
-                    <!--    only other compsci course, AP Compsci. I rediscovered my love for programming during that course,-->
-                    <!--    and compsci became my top choice of college major. During my senior spring,-->
-                    <!--    I decided to take a gap year before college, due in large part to my excitement with learning more about computers.-->
-
-                    <!--    The world of pressing buttons to control computers is a large one, however, and intimidating to a newbie. -->
-                    <!--    Without much understanding of the landscape, I bought a 48-hour fullstack web dev course on Udemy. -->
-                    <!--</div>-->
-                    <!--<div id="values-text" class="about-text">-->
-                    <!--    <h5>I believe that curiousity is fundamentally good, that the natural world is sacred, and that individuals' decisions -->
-                    <!--    impact the quality of the future.</h5> -->
-                    <!--    <br/>-->
-                    <!--    <p>I believe that people should only work towards goals which align with their values, and that the only reason to collaborate-->
-                    <!--    is to work towards common goals. Therefore, shared values should be the foundation of any working relationship. It is a flaw of our-->
-                    <!--    tech-era collaborative tools (and indeed capitalist collaboration in general) that everybody shares what they can do, but not why -->
-                    <!--    they want to do those things. I will address this problem here.</p>-->
-                    <!--    <br/>-->
-                    <!--    <p><b>I care about conserving the natural beauty of our world,</b> which I believe to be an elementary ingredient of human health and joy.-->
-                    <!--    <br><br><b>I believe that intellectual curiousity is the noblest human craving,</b> and a natural consequence of the decision to appreciate life.-->
-                    <!--    Extending this, I think that education is the single most important social system.-->
-                    <!--    <br><br><b>I consider liberty to be an intrinsically valuable end in itself,</b> and that we as a global community are at greater risk of losing our sense -->
-                    <!--    of liberty than we have collectively been since the rise of fascism in the 20th century – this by virtue of complacency and panic more than hatred and demagoguery.-->
-                    <!--    </p>-->
-                    <!--    <br>-->
-                    <!--    <p>Ultimately, for me, while solipsism is logically inevitable, it is fruitful to pursue an intangible sense of universal harmony based on well thought-out moral assumptions, -->
-                    <!--    like the protection and continuation of the human historical narrative.</p>-->
-                    <!--</div>-->
-                </div>
-                <div class="col-xs-0 col-sm-1"></div>
-            </div>
-        </div>
+        
     </div>
 </div>
