--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -2,12 +2,13 @@
 <hr id="switch"></hr>
 <div class="navbar navbar-bottom">
     <ul id="nav-list">
-        <li class="nav-item"><a href="#about">ABOUT</a></li>
-        <li class="nav-item"><a href="#projects">PROJECTS</a></li>
-        <li id="nav-head"><a href="/">TOBY WEED</a></li>
-        <li class="nav-item"><a href="#resume">RESUME</a></li>
-        <li class="nav-item"><a href="#contact">CONTACT</a></li>
-        <li class="dropdown"><a id="dropdown-button" onclick="dropNav()"><span class="glyphicon glyphicon-menu-hamburger"></span></a></li>
+        <li id="nav-head"><a href="/">ph</a></li>
+        <div class="nav-items">
+            <li class="nav-item"><a href="#about">about</a></li>
+            <li class="nav-item"><a href="#team">team</a></li>
+            <li class="nav-item"><a href="#contact">contact</a></li>
+            <li class="dropdown"><a id="dropdown-button" onclick="dropNav()"><span class="glyphicon glyphicon-menu-hamburger"></span></a></li>
+        </div>
     </ul>
     <div class="dropdown-content navbar-responsive">
         <ul class="drop-list">
