--- a/views/partials/about.ejs
+++ b/views/partials/about.ejs
@@ -1,7 +1,21 @@
 <div id="about">
-    <h1>Welcome to the Middlebury phorum.</h1>
+    <h1>Welcome to the Middlebury phorum homepage.</h1>
     <hr/>
-    <div class="about-content">
-        
+    <div class="content">
+        <p>
+        We're a nonprofit campus startup seeking to design a digital platform which, via structure
+        and incentive, facilitates discourse that distills the best ideas, as opposed to distracting
+        from them.
+        <br/>
+        <br/>
+        </p>
+        <div id="how-it-works">
+                <h3>HERE'S HOW IT WORKS </h3>
+
+            <br/>
+            <br/>
+
+            <img src="/pics/paper.png" alt="">
+        </div>
     </div>
 </div>
