--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -22,11 +22,7 @@
         </div>
 
         <div class="sub">
-            <% include partials/projects.ejs %>
-        </div>
-
-        <div class="sub">
-            <% include partials/resume.ejs %>
+            <% include partials/team.ejs %>
         </div>
 
         <div class="sub">
