--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,7 +11,6 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/about.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/contact.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/essays.css">
-    <link rel="stylesheet" type="text/css" href="/stylesheets/projects.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/resume.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/navbar.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/responsive.css">
@@ -53,8 +52,7 @@
 			navItems = $('.navbar').find('a'),
 			navHead = $('#switch').offset().top,
 			about = $('#about').offset().top,
-			resume = $('#resume').offset().top,
-			projects = $('#projects').offset().top,
+			resume = $('#team').offset().top,
 			contact = $('#contact').offset().top;
 
 		//Add background color to the navbar if it's on the landing image & the dropdown is not hidden.
@@ -74,12 +72,10 @@
 		$(navItems).removeClass('active');
 
 		if (fromTop >= about) {
-			if (fromTop >= about - 100 && fromTop < projects - 100) {
+			if (fromTop >= about - 100 && fromTop < team - 100) {
 				$('a[href="#about"]').addClass('active');
-			} else if (fromTop >= projects - 100 && fromTop < resume - 100) {
-				$('a[href="#projects"]').addClass('active');
-			} else if (fromTop >= resume - 100 && fromTop < contact - 300) {
-				$('a[href="#resume"]').addClass('active');
+			} else if (fromTop >= team - 100 && fromTop < contact - 100) {
+				$('a[href="#team"]').addClass('active');
 			} else if (fromTop >= contact - 300) {
 				$('a[href="#contact"]').addClass('active');
 			}
