add some styling

--- a/views/partials/about.ejs
+++ b/views/partials/about.ejs
@@ -10,7 +10,7 @@
         <br/>
         </p>
         <div id="how-it-works">
-                <h3>HERE'S HOW IT WORKS </h3>
+                <h3>How it Works</h3>
 
             <br/>
             <br/>
