--- a/public/stylesheets/about.css
+++ b/public/stylesheets/about.css
@@ -5,25 +5,31 @@
 	color: black;
 	background-color: #dee5e5;
 	padding-top: 90px;
+
 	font-family: 'Source Sans Pro', sans-serif;
+	font-weight: 200;
 }
 
-#about h1 {
-	/*font-weight: 400;*/
-	font-size: 2.9em;
+#about h1,
+h3 {
+	padding: 0px 20px;
+	font-weight: 200;
 }
 
 #about .content {
 	font-size: 1.3em;
-	padding: 90px 40px 63px;
 }
 
 #about .content p {
-	padding: 90px 40px 63px;
+	padding: 10px 20px;
 }
 
 #about .content #how-it-works {
 	background-color: #007577;
-	color: #86bbd8;
-	text-align: center;
+	color: #dee5e5;
+	padding: 10px 40px;
 }
+/*
+#about .content #how-it-works h3 {
+	font-weight: 200;
+} */
